--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -33,5 +33,12 @@
         }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+  "MongoDbSettings": {
+    "DatabaseName": "AquariumManagement",
+    "Port": "27017",
+    "Password": "pass",
+    "Username": "admin",
+    "Server": "127.0.0.1"
   }
 }
