--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,26 +1,34 @@
 version: '3.4'
-
+name: aquarium-manager
 services:
   mongo:
     container_name: mongo-dev
     image: mongo:latest
+    healthcheck:
+      test: "echo 'db.stats().ok' | mongosh localhost:27017/admin --quiet -u $MONGO_INITDB_ROOT_USERNAME -p $MONGO_INITDB_ROOT_PASSWORD"
+      interval: 10s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_DATABASE=auth
       - MONGO_INITDB_ROOT_PASSWORD=pass
-    networks: 
+    networks:
       - mongo-compose-network
     ports:
       - '27017:27017'
-    volumes: 
+    volumes:
       - ./MongoData:/data/db
-  
+
   mongo-express:
     container_name: mongo-express
     image: mongo-express
+    restart: on-failure
     depends_on:
-      - mongo
-    networks: 
+      mongo:
+        condition: service_healthy
+    networks:
       - mongo-compose-network
     environment:
       - ME_CONFIG_MONGODB_SERVER=mongo-dev
@@ -30,14 +38,14 @@ services:
       - ME_CONFIG_BASICAUTH_PASSWORD=pass
     ports:
       - '8081:8081'
-    volumes: 
-      - ./MongoData:/data/db      
+    volumes:
+      - ./MongoData:/data/db
   influxdb:
     image: influxdb:latest
     volumes:
       # Mount for influxdb data directory and configuration
       - ./InfluxData:/var/lib/influxdb2:rw
-    networks: 
+    networks:
       - mongo-compose-network
     ports:
       - "8086:8086"
@@ -45,19 +53,19 @@ services:
     image: grafana/grafana-oss:latest
     ports:
       - "3002:3000"
-    networks: 
+    networks:
       - mongo-compose-network
   datasimulation:
     image: thomasschirgi/datasimulation:latest
     container_name: datasimulation2023
-    networks: 
+    networks:
       - mongo-compose-network
     ports:
-     - "4999:80"
-     - "502:502"
-     - "1883:1883"
+      - "4999:80"
+      - "502:502"
+      - "18830:18830"
     volumes:
-     - "./SimulationSettings:/app/SimulationSettings"
+      - "./SimulationSettings:/app/SimulationSettings"
 networks:
   mongo-compose-network:
     driver: bridge
